--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,4 +22,5 @@ serde_json = "1.0.128"
 shellexpand = "3.1.0"
 simple_logger = { version = "5.0.0", features = ["stderr"] }
 tokio = { version = "1.40.0", features = ["full"] }
+tokio-util = "0.7.12"
 toml = "0.8.19"
